feat: add postWritePage

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script
       type="module"
       src="/src/main.tsx"></script>
+    <script type="text/javascript" src="key"></script>
   </body>
 </html>
